test/e2e/suites/separate-appnetwork-v4/rbac.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: meridio-2-network-sidecar
  namespace: e2e-separate-appnetwork-v4
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: meridio-2-network-sidecar
  namespace: e2e-separate-appnetwork-v4
rules:
- apiGroups: ["meridio-2.nordix.org"]
  resources: ["endpointnetworkconfigurations"]
  verbs: ["get", "list", "watch"]
- apiGroups: ["meridio-2.nordix.org"]
  resources: ["endpointnetworkconfigurations/status"]
  verbs: ["get", "update", "patch"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: meridio-2-network-sidecar
  namespace: e2e-separate-appnetwork-v4
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: meridio-2-network-sidecar
subjects:
- kind: ServiceAccount
  name: meridio-2-network-sidecar
  namespace: e2e-separate-appnetwork-v4
