test/e2e/suites/separate-appnetwork-v4/routing.yaml
---
# gw-a1 router (VLAN 100, ASN 64512)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-a1-router-v4
spec:
  gatewayRef:
    name: gw-a1
  interface: "vlan-100"
  address: "169.254.10.150"
  protocol: "BGP"
  bgp:
    localASN: 64512
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-a1
spec:
  parentRefs:
  - name: gw-a1
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-a1
  destinationCIDRs:
  - "10.0.0.1/32"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
---
# gw-a2 router (VLAN 200, ASN 64513)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-a2-router-v4
spec:
  gatewayRef:
    name: gw-a2
  interface: "vlan-200"
  address: "169.254.11.150"
  protocol: "BGP"
  bgp:
    localASN: 64513
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-a2
spec:
  parentRefs:
  - name: gw-a2
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-a2
  destinationCIDRs:
  - "10.0.0.2/32"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
